--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 aiohttp==3.6.2
 aiosmtplib==1.1.2
 alabaster==0.7.12
-anaconda-client==1.7.2
-anaconda-navigator==1.9.7
-anaconda-project==0.8.3
+# anaconda-client==1.7.2
+# anaconda-navigator==1.9.7
+# anaconda-project==0.8.3
 asn1crypto==1.0.1
 astroid==2.3.1
 astropy==3.2.2
@@ -31,10 +31,10 @@ cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 cloudpickle==1.2.2
-clyent==1.2.2
+# clyent==1.2.2
 colorama==0.4.1
-conda-package-handling==1.6.0
-conda-verify==3.4.2
+# conda-package-handling==1.6.0
+# conda-verify==3.4.2
 constantly==15.1.0
 contextlib2==0.6.0
 crontab==0.22.6
@@ -59,7 +59,7 @@ fsspec==0.5.2
 future==0.17.1
 gevent==1.4.0
 glob2==0.7
-gmpy2==2.0.8
+# gmpy2==2.0.8
 google-api-core==1.17.0
 google-api-python-client==1.8.3
 google-auth==1.14.3
@@ -110,16 +110,16 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 mccabe==0.6.1
 mistune==0.8.4
-mkl-fft==1.0.14
-mkl-random==1.1.0
-mkl-service==2.3.0
+# mkl-fft==1.0.14
+# mkl-random==1.1.0
+# mkl-service==2.3.0
 mock==3.0.5
 more-itertools==7.2.0
 mpmath==1.1.0
 msgpack==0.6.1
 multidict==4.7.2
 multipledispatch==0.6.0
-navigator-updater==0.2.1
+# navigator-updater==0.2.1
 nbconvert==5.6.0
 nbformat==4.4.0
 networkx==2.3
@@ -164,13 +164,13 @@ pycodestyle==2.5.0
 pycosat==0.6.3
 pycparser==2.19
 pycrypto==2.6.1
-pycurl==7.43.0.3
+# pycurl==7.43.0.3
 PyDispatcher==2.0.5
 pyflakes==2.1.1
 Pygments==2.4.2
 PyHamcrest==1.9.0
 pylint==2.4.2
-pyodbc==4.0.27
+# pyodbc==4.0.27
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
 pyrsistent==0.15.4
@@ -187,9 +187,9 @@ pytz==2019.3
 PyWavelets==1.0.3
 PyYAML==5.1.2
 pyzmq==18.1.0
-QtAwesome==0.6.0
-qtconsole==4.5.5
-QtPy==1.9.0
+# QtAwesome==0.6.0
+# qtconsole==4.5.5
+# QtPy==1.9.0
 queuelib==1.5.0
 requests==2.22.0
 requests-oauthlib==1.3.0
